add multi image agent
